--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SBE"
 uuid = "b5db94cf-04c1-4db7-9b05-47f582871ea8"
-authors = ["Darryl Gamroth <dgamroth@rubus.ca>"]
 version = "0.1.0"
+authors = ["Darryl Gamroth <dgamroth@rubus.ca>"]
 
 [deps]
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
@@ -12,15 +12,19 @@ StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
 UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
 [compat]
+AllocCheck = "0.2.2"
 EnumX = "1"
 EzXML = "1.2"
 MappedArrays = "0.4"
 StringViews = "1"
 UnsafeArrays = "1"
+julia = "1.6"
 
 [extras]
 AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticStrings = "4db0a0c5-418a-4e1d-8806-cb305fe13294"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["AllocCheck", "Test"]
+test = ["AllocCheck", "StaticArrays", "StaticStrings", "Test"]
