Fix IR codegen edge cases and var data handling

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,8 @@ EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticStrings = "4db0a0c5-418a-4e1d-8806-cb305fe13294"
 StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
 UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
@@ -15,14 +17,14 @@ UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 EnumX = "1"
 EzXML = "1.2"
 MappedArrays = "0.4"
+StaticArrays = "1.9.15"
+StaticStrings = "0.2.6"
 StringViews = "1"
 UnsafeArrays = "1"
 
 [extras]
 AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-StaticStrings = "4db0a0c5-418a-4e1d-8806-cb305fe13294"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["AllocCheck", "StaticArrays", "StaticStrings", "Test"]
+test = ["AllocCheck", "Test"]
