--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ test/generated/
 Manifest.toml
 test/java-fixtures/generated/
 test/java-fixtures/classes/
+test/java-fixtures/*.class
+test/java-fixtures/*.jar
