--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     permissions:
       actions: write
       contents: read
+    env:
+      SBE_VERSION: '1.36.2'
     strategy:
       fail-fast: false
       matrix:
@@ -62,6 +64,13 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+      - name: Cache Maven repository
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: m2-${{ runner.os }}-sbe-${{ env.SBE_VERSION }}
+          restore-keys: |
+            m2-${{ runner.os }}-sbe-
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
