--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,8 @@ UnsafeArrays = "1"
 
 [extras]
 AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["AllocCheck", "Test"]
+test = ["AllocCheck", "Downloads", "Test"]
