--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,6 @@ authors = ["Darryl Gamroth <dgamroth@rubus.ca>"]
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-StaticStrings = "4db0a0c5-418a-4e1d-8806-cb305fe13294"
 StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
 UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
@@ -17,15 +14,19 @@ UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 EnumX = "1"
 EzXML = "1.2"
 MappedArrays = "0.4"
-StaticArrays = "1.9.15"
-StaticStrings = "0.2.6"
+AllocCheck = "0.2"
+Aqua = "0.8"
+Downloads = "1"
+Test = "1"
+julia = "1.10"
 StringViews = "1"
 UnsafeArrays = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["AllocCheck", "Downloads", "Test"]
+test = ["Aqua", "AllocCheck", "Downloads", "Test"]
